[project]
name = "agentic-app"
version = "0.1.0"
description = "An agentic app developed by AJ LeSure in order to demonstrate understanding of system architecture and optimization with AI workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "ruff>=0.15.4",
]

lint.extend-select = ["ALL"]
